--- a/sincruvetest/sincruvetest.vcxproj.filters
+++ b/sincruvetest/sincruvetest.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="sincurve.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="control_card.cpp">
+    <ClCompile Include="D:\ihealth\ihealth\ihealth\control_card.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -29,7 +29,7 @@
     <ClInclude Include="sincurve.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="control_card.h">
+    <ClInclude Include="D:\ihealth\ihealth\ihealth\control_card.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
